--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <img src='./images/portfolio.png' alt='Portfolio Project Image'>
                     <div class='project-details'>
                         <h3>Portfolio Website</h3>
-                        <a href = 'https://github.com/usif-b/portoflio'>Repository</a>
+                        <a href = 'https://github.com/usif-b/portfolio'>Repository</a>
                         <p>This website! It is just a portfolio site with a responsive design</p>
                         <ul>
                             <li class='html-tag'>HTML</li>
